# haskell-from-scratch

./: .gitignore  haskell-from-scratch.cabal
01-Parity/: Main.hs
02-Fibonacci/: Main.hs
src/: Main.hs
src/Basics/: Fibonacci.hs  Parity.hs
