
name:                haskell-from-scratch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              AndrewRademacher
maintainer:          andrewrademacher@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable scratch
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      base            >=4.7   && <4.8
